--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,37 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'mysql:mysql-connector-java:8.0.31'
+	implementation 'org.hibernate:hibernate-validator:8.0.0.Final'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+
+/*swagger {
+	apiSource {
+		springmvc = true
+		locations = 'eu.balev.demo.swagger'
+		basePath = '/api'
+		info {
+			title = 'Vote Session Manger API'
+			description = 'You vote matter'
+			version = '1.0'
+			contact {
+				email = 'youvote@votemanager.com'
+				name = 'Jose'
+			}
+			license {
+				url = 'http://www.apache.org/licenses/LICENSE-2.0.html'
+				name = 'Apache 2.0'
+			}
+		}
+		swaggerDirectory = "${project.rootDir}/generated/swagger-json"
+		swaggerApiReader = 'com.github.kongchen.swagger.docgen.reader.SpringMvcApiReader'
+		modelConverters = [ 'io.swagger.validator.BeanValidator' ]
+	}
+}*/
 
 tasks.named('test') {
 	useJUnitPlatform()
