--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 server.port=8080
+server.servlet.context-path=/vote-manager
+springdoc.swagger-ui.path=/swagger-ui.html
 spring.datasource.url=jdbc:mysql://localhost:3306/votemanagerdb?useSSL=false
 spring.datasource.username=votemanager
 spring.datasource.password=1234
+
+application-description=@project.description@
+application-version=@project.version@
+logging.level.org.springframework.boot.autoconfigure=ERROR
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
